# transit

./: .envrc  .gitignore  AGENTS.md  AI_ARTIFACTS.md  AI_TRACES.md  ARCHITECTURE.md  CLAUDE.md  COMMUNICATION.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  DIRECT_CUTOVER.md  DRIFT.md  EVALUATIONS.md  FINALITY.md  GEMINI.md  GUIDE.md  HOSTED_CONSUMERS.md  INSTRUCTIONS.md  INTEGRITY.md  Justfile  LICENSE  MATERIALIZATION.md  README.md  RELEASE.md  USER_GUIDE.md  flake.nix  keel.toml  rust-toolchain.toml  transit.toml.example
.github/workflows/: ci.yml  docs.yml  publish-docs.yml
.keel/: README.md  flow_history.json  heartbeat
.keel/adrs/: 0001-drift-as-a-first-class-metric.md
.keel/bearings/VDd0u3PFg/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDd1EybWm/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDd1F0OXH/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDd1F1tUe/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDd1IzACq/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDd1J2IDM/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDf8F20kc/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/cache/: doctor.json
.keel/epics/VDcx2lQGz/: PRD.md  README.md
.keel/epics/VDd0u3PFg/: PRD.md  README.md
.keel/epics/VDd1EybWm/: PRD.md  README.md
.keel/epics/VDd1F0OXH/: PRD.md  README.md
.keel/epics/VDd1F1tUe/: PRD.md  README.md
.keel/epics/VDd1J2IDM/: PRD.md  README.md
.keel/epics/VDeYUdLSW/: PRD.md  README.md
.keel/epics/VDfEx13Wu/: PRD.md  README.md
.keel/epics/VDoZVggut/: PRD.md  README.md
.keel/epics/VDoZWCfw3/: PRD.md  README.md
.keel/epics/VDssrPWoX/: PRD.md  README.md
.keel/epics/VEz2gV93L/: PRD.md  README.md
.keel/epics/VEz2huKbt/: PRD.md  README.md
.keel/epics/VEz2iOasp/: PRD.md  README.md
.keel/epics/VF7qPMy1g/: PRD.md  README.md
.keel/epics/VFC1jEl3d/: PRD.md  README.md
.keel/epics/VFC8awXmb/: PRD.md  README.md
.keel/epics/VFC9XEYwI/: PRD.md  README.md
.keel/epics/VFCAdyu9b/: PRD.md  README.md
.keel/epics/VFCNI3lfw/: PRD.md  README.md
.keel/epics/VFCvzGZeD/: PRD.md  README.md
.keel/epics/VFCxQxWxm/: PRD.md  README.md
.keel/epics/VFDyfjLlI/: PRD.md  README.md
.keel/epics/VFHP6ptRw/: PRD.md  README.md
.keel/epics/VFJJ7J3v5/: PRD.md  README.md
.keel/epics/VFOPrFVvq/: PRD.md  README.md
.keel/epics/VGh59soBt/: PRD.md  README.md
.keel/epics/VGj3EvcuK/: PRD.md  README.md
.keel/epics/VGn6PdlVK/: PRD.md  README.md
.keel/epics/VGnPIhJl2/: PRD.md  README.md
.keel/epics/VGzzXWgvv/: PRD.md  README.md
.keel/epics/VHRQnhLcW/: PRD.md  README.md
.keel/epics/VHRmIhDsm/: PRD.md  README.md
.keel/epics/VHUAlZWZG/: PRD.md  README.md
.keel/epics/VHUSaJ0w8/: PRD.md  README.md
.keel/epics/VHUjJj4Gh/: PRD.md  README.md
.keel/epics/VHYE3HF6J/: PRD.md  README.md
.keel/epics/VI1mae3rd/: PRD.md  README.md
.keel/epics/VI1mbSnsy/: PRD.md  README.md
.keel/epics/VI1mcFKum/: PRD.md  README.md
.keel/epics/VICkg4FuI/: PRD.md  README.md
.keel/epics/VICkg5IvO/: PRD.md  README.md
.keel/epics/VICkg6QuJ/: PRD.md  README.md
.keel/knowledge/: VIF8a1x4U.md  VIM1kQn2R.md  VJ4yN7cLm.md  VK3sP2rNd.md  VL5mQ8pTs.md  VM6kT4nQe.md  VN7uR5mKb.md
.keel/missions/VDcx0jbsJ/: CHARTER.md  LOG.md  README.md
.keel/missions/VDd0tzmDw/: CHARTER.md  LOG.md  README.md
.keel/missions/VDeXa6bFd/: CHARTER.md  LOG.md  README.md
.keel/missions/VDfEs25yS/: CHARTER.md  LOG.md  README.md
.keel/missions/VDoZUUhQL/: CHARTER.md  LOG.md  README.md
.keel/missions/VDssqtPXS/: CHARTER.md  LOG.md  README.md
.keel/missions/VF5F4AuxO/: CHARTER.md  LOG.md  README.md
.keel/missions/VF7q7nwdX/: CHARTER.md  LOG.md  README.md
.keel/missions/VFC1jET3e/: CHARTER.md  LOG.md  README.md
.keel/missions/VFC8avzma/: CHARTER.md  LOG.md  README.md
.keel/missions/VFC9XEFwH/: CHARTER.md  LOG.md  README.md
.keel/missions/VFCAdyQ9L/: CHARTER.md  LOG.md  README.md
.keel/missions/VFCNI2gem/: CHARTER.md  LOG.md  README.md
.keel/missions/VFCvyeOcM/: CHARTER.md  LOG.md  README.md
.keel/missions/VFCxQx7xn/: CHARTER.md  LOG.md  README.md
.keel/missions/VFDyfiqlL/: CHARTER.md  LOG.md  README.md
.keel/missions/VFHP1pM8Y/: CHARTER.md  LOG.md  README.md
.keel/missions/VFJJ7Icv2/: CHARTER.md  LOG.md  README.md
.keel/missions/VFOPrEjuy/: CHARTER.md  LOG.md  README.md
.keel/missions/VGh598Oz0/: CHARTER.md  LOG.md  README.md
.keel/missions/VGj3Euttb/: CHARTER.md  LOG.md  README.md
.keel/missions/VGn6FO9e8/: CHARTER.md  LOG.md  README.md
.keel/missions/VGnPIgzlP/: CHARTER.md  LOG.md  README.md
.keel/missions/VGzzOvI8O/: CHARTER.md  LOG.md  README.md
.keel/missions/VHRQnhScY/: CHARTER.md  LOG.md  README.md
.keel/missions/VHRmIgEqY/: CHARTER.md  LOG.md  README.md
.keel/missions/VHUAhwLlS/: CHARTER.md  LOG.md  README.md
.keel/missions/VHUSaHyuZ/: CHARTER.md  LOG.md  README.md
.keel/missions/VHUjJi2Fn/: CHARTER.md  LOG.md  README.md
clients/python/: proof.py
crates/transit-cli/: Cargo.toml
crates/transit-cli/src/: main.rs
crates/transit-client/: Cargo.toml  README.md
crates/transit-client/examples/: proof.rs  workloads.rs
crates/transit-client/src/: client.rs  lib.rs  projection.rs
crates/transit-core/: Cargo.toml
crates/transit-core/src/: artifact.rs  bootstrap.rs  config.rs  consensus.rs  cursor.rs  engine.rs  kernel.rs  lib.rs  materialization.rs  membership.rs  object_store_support.rs  server.rs  storage.rs
crates/transit-core/src/workloads/: ai.rs  communication.rs  mod.rs
crates/transit-materialize/: Cargo.toml
crates/transit-materialize/src/: datafusion.rs  engine.rs  lib.rs  prolly.rs  sql.rs
crates/transit-server/: Cargo.toml
crates/transit-server/src/: lib.rs
dojo/: proof.py
dojo/training/: sparring_tapes.py
nix/: scion.nix  transit.nix
scripts/: publish-docs.sh
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: intro.mdx
website/scripts/: sync-foundational-docs.mjs
(+647 files in other folders)
