[workspace]
members = [
    "crates/transit-cli",
    "crates/transit-client",
    "crates/transit-core",
    "crates/transit-server",
    "crates/transit-materialize",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
object_store = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
textplots = "0.8"
futures = "0.3"
