[package]
name = "transit-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "transit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
transit-core = { path = "../transit-core" }
