[package]
name = "transit-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "transit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
textplots.workspace = true
transit-core = { path = "../transit-core" }

[dev-dependencies]
tempfile.workspace = true
