[package]
name = "transit-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "transit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
datafusion.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
textplots.workspace = true
transit-client = { path = "../transit-client" }
transit-core = { path = "../transit-core" }
transit-materialize = { path = "../transit-materialize" }
transit-server = { path = "../transit-server" }

[dev-dependencies]
tempfile.workspace = true
