[package]
name = "transit-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
transit-core = { path = "../transit-core" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
