[package]
name = "transit-client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
transit-core = { path = "../transit-core" }

[dev-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
