[package]
name = "transit-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono = "0.4"
dashmap.workspace = true
futures = { version = "0.3", package = "futures" }
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
