[package]
name = "transit-materialize"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
transit-core = { path = "../transit-core" }

[dev-dependencies]
tempfile.workspace = true
