[package]
name = "transit-materialize"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = "0.4"
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
transit-core = { path = "../transit-core" }

[dev-dependencies]
tempfile.workspace = true
